Correction CSS tc-contrast

--- a/style.css
+++ b/style.css
@@ -815,7 +815,7 @@ h4 {
 }
 
 .tc-contrast {
-    color: #373737 !important
+    color: #373737 !important;
 }
 
 .btn-atomic-tangerine {
